#Basic DM algorithms

SET( KMEANS_SRC generalkmeans.cpp )
          
ADD_LIBRARY(${KMEANS_LIB_NAME} SHARED ${KMEANS_SRC} )

TARGET_LINK_LIBRARIES(${KMEANS_LIB_NAME} ${MEASURES_LIB_NAME} )


INSTALL( TARGETS ${KMEANS_LIB_NAME} 
            LIBRARY DESTINATION ${INSTALL_LIB_PATH} 
            RUNTIME DESTINATION ${INSTALL_LIB_PATH}
            ARCHIVE DESTINATION ${INSTALL_LIB_PATH} )

INSTALL( FILES generalkmeans.h DESTINATION ${INSTALL_INCLUDE_PATH} )


