#Centrality clustering

#PAGERANK_LIB_NAME
#HITS_LIB_NAME
#CENTRALITY_LIB_NAME

SET( PR_SRC pagerank.cpp )
#SET( HITS_SRC hits.cpp )
SET( CENTRALITY_SRC centralitybased.cpp )


ADD_LIBRARY(${PAGERANK_LIB_NAME} SHARED ${PR_SRC} )

ADD_LIBRARY(${CENTRALITY_LIB_NAME} SHARED ${CENTRALITY_SRC} )

TARGET_LINK_LIBRARIES(${CENTRALITY_LIB_NAME} ${PAGERANK_LIB_NAME} )


INSTALL( TARGETS ${PAGERANK_LIB_NAME} 
            LIBRARY DESTINATION ${INSTALL_LIB_PATH} 
            RUNTIME DESTINATION ${INSTALL_LIB_PATH}
            ARCHIVE DESTINATION ${INSTALL_LIB_PATH} )

INSTALL( FILES pagerank.h DESTINATION ${INSTALL_INCLUDE_PATH} )


INSTALL( TARGETS ${CENTRALITY_LIB_NAME} 
            LIBRARY DESTINATION ${INSTALL_LIB_PATH} 
            RUNTIME DESTINATION ${INSTALL_LIB_PATH}
            ARCHIVE DESTINATION ${INSTALL_LIB_PATH} )
            
INSTALL( FILES centralitybased.h DESTINATION ${INSTALL_INCLUDE_PATH} )
