#Louvain

#SET( LibName louvain )

SET(LOUV_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/CommunitySpace.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/louvain.cpp)
  
ADD_LIBRARY(${LOUVAIN_LIB_NAME} SHARED ${CPP_FILES} ${LOUV_SRCS} )

TARGET_LINK_LIBRARIES(${LOUVAIN_LIB_NAME} ${MEASURES_LIB_NAME} ${TULIP_LIBRARY} )

INSTALL( TARGETS ${LOUVAIN_LIB_NAME} 
            LIBRARY DESTINATION ${INSTALL_LIB_PATH} 
            RUNTIME DESTINATION ${INSTALL_LIB_PATH}
            ARCHIVE DESTINATION ${INSTALL_LIB_PATH} )

INSTALL( FILES louvain.h DESTINATION ${INSTALL_INCLUDE_PATH} )
INSTALL( FILES CommunitySpace.h DESTINATION ${INSTALL_INCLUDE_PATH} )

