#Mixed: SOM + Louvain

SET(SRCS somclusteringspace.cpp
    somnode.cpp
    kohonenmap.cpp
    povclustering.cpp)
  
ADD_LIBRARY(${MIXED_LIB_NAME} SHARED ${CPP_FILES} ${SRCS} )

TARGET_LINK_LIBRARIES(${MIXED_LIB_NAME} ${MEASURES_LIB_NAME} ${LOUVAIN_LIB_NAME} ${TULIP_LIBRARY} )

INSTALL( TARGETS ${MIXED_LIB_NAME} 
            LIBRARY DESTINATION ${INSTALL_LIB_PATH} 
            RUNTIME DESTINATION ${INSTALL_LIB_PATH}
            ARCHIVE DESTINATION ${INSTALL_LIB_PATH} )

INSTALL( FILES povclustering.h DESTINATION ${INSTALL_INCLUDE_PATH} )
INSTALL( FILES somclusteringspace.h DESTINATION ${INSTALL_INCLUDE_PATH} )
INSTALL( FILES kohonenmap.h DESTINATION ${INSTALL_INCLUDE_PATH} )
INSTALL( FILES somnode.h DESTINATION ${INSTALL_INCLUDE_PATH} )
